<resources>
    <string name="nro_de_puntos">Ingrese el número de puntos, puntos > 0</string>
    <string name="app_name">Proyecto Geminis</string>
    <string name="greeting_hello">Hola Mundo</string>
    <string name="titulo_una_variable">Ecuaciones de una Variable</string>
    <string name="titulo_interpolacion">Interpolación</string>
    <string name="titulo_sistema_ecuaciones">Sistema de Ecuaciones</string>
    <string name="titulo_graficador">Graficador</string>
    <string name="titulo_busquedas_incrementales">Búsquedas Incrementales</string>
    <string name="titulo_regla_falsa">Método de la Regla Falsa</string>
    <string name="titulo_punto_fijo">Método de Punto fijo</string>
    <string name="titulo_newton">Método de Newton</string>
    <string name="titulo_secante">Método de la Secante</string>
    <string name="titulo_raices_multiples">Método de las Raíces Múltiples</string>
    <string name="titulo_eliminiacion_gauss_simple">Eliminación Gaussiana Simple</string>
    <string name="titulo_pivoteo">Eliminación Gaussiana con pivoteo</string>
    <string name="entrada_funcion_g">Ingrese la función g(x)</string>
    <string name="entrada_funcion">Ingrese una función f(x)</string>
    <string name="entrada_funcion_prima">Ingrese la función f\'(x)</string>
    <string name="entrada_funcion_2_prima">Ingrese la función f\'\'(x)</string>
    <string name="entrada_iteraciones">Ingrese el número de iteraciones</string>
    <string name="entrada_delta">Ingrese el delta</string>
    <string name="entrada_Xinf">Ingrese el límite inferior (Xi)</string>
    <string name="entrada_XSup">Ingrese el límite superior (Xs)</string>
    <string name="entrada_punto_inicial">Ingrese el punto inicial</string>
    <string name="entrada_tol">Ingrese la tolerancia deseada</string>
    <string name="entrada_tipoError">Seleccione el tipo de error que desea</string>
    <string name="resultado">Resultado</string>
    <string name="entrada_valor_inicial">Ingrese el valor inicial</string>
    <string name="pista_iteraciones">Ejemplo: 1000</string>
    <string name="pista_delta">Ejemplo: 0.5</string>
    <string name="pista_valor_inicial">Ejemplo: 0</string>
    <string name="pista_funcion_f">Ingrese las funciones:</string>
    <string name="pista_ecuaciones_una_variable">x+2*(15-3)</string>
    <string name="pista_entrada_funciones">Una función por cada línea con el formato:
        f->sqrt(x+3)/4 donde f es el nombre de la función</string>
    <string name="texto_btgraficar">Graficar</string>
    <string name="detalles">Detalles</string>
    <string name="Agregar_ecuacion">Agregar ecuación</string>
    <string name="st_volver">Volver</string>
    <string name="sp_entrada">Seleccione una ecuación para agregar</string>
    <string name="titulo_biseccion">Método de la Bisección</string>
    <string name="bt_calcular">Calcular</string>
    <string name="bt_borrar_historico_funciones">Borrar funciones almacenadas</string>
    <string name="texto_ayuda_biseccion">Parte del supuesto que el intervalo que recibe tiene al menos una raíz, es decir, la función es continua en [a, b] y f(a) * f(b) menor que 0. Se recomienda usar el graficador para hallar un intervalo. Se basa en el teorema del valor intermedio y genera una sucesión de valores formada por los puntos medios obtenidos en cada iteración del algoritmo.</string>
    <string name="bt_ingresar">Ingresar</string>
    <string-array name="OpcionesMenuInicio">
        <item>Ecuaciones de una variable</item>
        <item>Sistema de ecuaciones</item>
        <item>Interpolación</item>
        <item>Graficador</item>
    </string-array>
    <string-array name="opciones_pivoteo">
        <item>Pivoteo Parcial</item>
        <item>Pivoteo Total</item>
    </string-array>
    <string-array name="opciones_factorizacion_sistema">
        <item>Gauss simple</item>
        <item>Crout</item>
        <item>Doolittle</item>
        <item>Cholesky</item>
    </string-array>
    <string-array name="opciones_metodos_iterativos">
        <item>Jacobi relajado</item>
        <item>Gauss Seidel relajado</item>
    </string-array>
    <string name="entrada_tipo_pivoteo">Seleccione el tipo de pivoteo a emplear</string>
    <string name="bt_siguiente">Siguiente</string>
    <string name="iteracionnro">Iteración:</string>
    <string name="titulo_factorizacion">Factorizacion Directa de Matrices</string>
    <string name="entrada_cantidad_ecuaciones_sistema">Ingrese la cantidad de ecuaciones del sistema</string>
    <string name="entrada_tipo_de_factorizacion_sistema">Seleccione el tipo de factorización a emplear</string>
    <string name="matriz_l">Matriz L</string>
    <string name="matriz_u">Matriz U</string>
    <string name="resultado_variables_z">Resultado variables Z</string>
    <string name="despeje_final">Despeje final:</string>
    <string name="titulo_metodos_iterativos">Métodos Iterativos</string>
    <string name="entrada_tipo_metodo_iterativo">Seleccione el método iterativo a usar</string>
    <string name="bt_salir">Salir</string>
    <string name="error_relativo">Error Relativo</string>
    <string name="error_absoluto">Error Absoluto</string>
    <string name="entrada_factor_ponderacion_iterativo">Ingrese el factor de ponderación</string>
    <string name="titulo_newton_diferencias_interpolacion">Polinomio Interpolante de Newton con Diferencias divididas</string>
    <string name="entrada_puntos">Ingrese la cantidad de puntos</string>
    <string name="salida_polinomio_interpolante">Polinomio interpolante:</string>
    <string name="titulo_lagrange">Polinomio Interpolante de Lagrange</string>
    <string name="entrada_punto_interpolacion">Si desea, ingrese la coordenada independiente para evaluar en el polinomio</string>
    <string name="bt_evaluar">Evaluar</string>
</resources>
