<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="eafit.geminis.actividades.ecuacionesunavariable.MenuUnaVariableActividad"
    android:orientation="vertical"
    android:layout_margin="@dimen/margen_abajo_entrada">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/titulo_una_variable"
        android:textStyle="bold"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="@dimen/tamanio_titulos"
        android:textAlignment="center"
        android:layout_marginBottom="20dp"
        android:layout_marginTop="20dp"/>
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/titulo_busquedas_incrementales"
        android:background="@color/botones_menu_una_variable"
        android:layout_marginBottom="@dimen/espacio_menu"
        android:id="@+id/bt_ir_busquedas"/>
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/titulo_biseccion"
        android:background="@color/botones_menu_una_variable"
        android:layout_marginBottom="@dimen/espacio_menu"
        android:id="@+id/bt_ir_biseccion"/>
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/titulo_regla_falsa"
        android:background="@color/botones_menu_una_variable"
        android:layout_marginBottom="@dimen/espacio_menu"
        android:id="@+id/bt_ir_regla_falsa"/>
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/titulo_punto_fijo"
        android:background="@color/botones_menu_una_variable"
        android:layout_marginBottom="@dimen/espacio_menu"
        android:id="@+id/bt_ir_punto_fijo"
        />
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/titulo_newton"
        android:background="@color/botones_menu_una_variable"
        android:layout_marginBottom="@dimen/espacio_menu"
        android:id="@+id/bt_ir_newton"
        />
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/titulo_secante"
        android:background="@color/botones_menu_una_variable"
        android:layout_marginBottom="@dimen/espacio_menu"
        android:id="@+id/bt_ir_secante"
        />
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/titulo_raices_multiples"
        android:background="@color/botones_menu_una_variable"
        android:id="@+id/bt_ir_raices_multiples"
        />
</LinearLayout>
