<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="eafit.geminis.actividades.ecuacionesunavariable.BusquedasActividad">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_margin="@dimen/margen_abajo_entrada">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:text="@string/titulo_busquedas_incrementales"
            android:layout_marginBottom="30dp"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/entrada_funcion"
            android:labelFor="@+id/entrada_funcion_busquedas"/>
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/pista_ecuaciones_una_variable"
            android:id="@+id/entrada_funcion_busquedas"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/entrada_iteraciones"
            android:labelFor="@+id/entrada_iteraciones_busquedas"/>
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/entrada_iteraciones_busquedas"
            android:hint="@string/pista_iteraciones"
            />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/entrada_delta"
            android:labelFor="@+id/entrada_delta_busquedas"/>
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/entrada_delta_busquedas"
            android:hint="@string/pista_delta"
            />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/entrada_valor_inicial"
            android:labelFor="@+id/entrada_valor_inicial_busquedas"/>
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/entrada_valor_inicial_busquedas"
            android:hint="@string/pista_valor_inicial"
            />
        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/bt_calcular"
            android:gravity="center"
            android:id="@+id/bt_calcular_busquedas"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/resultado"
            android:labelFor="@+id/resultado_busquedas"/>

        <EditText
            android:id="@+id/resultado_busquedas"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:enabled="false" />

        <HorizontalScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TableLayout
                style="@style/tabla"

                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:stretchColumns="*"
                android:id="@+id/tabla_busquedas">

                <TableRow
                    style="@style/columna"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:id="@+id/fila_titulo_busquedas">

                    <TextView
                        style="@style/itemColumna"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="n"
                        />

                    <TextView
                        style="@style/itemColumna"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="x0" />

                    <TextView
                        style="@style/itemColumna"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="f(x0)" />
                </TableRow>
            </TableLayout>
        </HorizontalScrollView>
    </LinearLayout>
</ScrollView>